# Medi_Care

./: README.md
medicare/: DATABASE_SCHEMA.md  PROJECT_SUMMARY.md  README.md  db.sqlite3  generate_all_templates.py  generate_templates.py  main.py  manage.py  pyproject.toml
medicare/medicare/: admin.py  ai_diagnosis.py  apps.py  forms.py  models.py  urls.py  views.py
medicare/medicare/management/commands/: create_test_user.py  import_data.py  link_test_patient.py
medicare/medicare/migrations/: 0001_initial.py
medicare/medicare_project/: asgi.py  settings.py  urls.py  wsgi.py
medicare/templates/medicare/: ai_diagnosis.html  ai_diagnosis_result.html  appointment_confirm_delete.html  appointment_detail.html  appointment_form.html  appointment_list.html  base.html  billing_confirm_delete.html  billing_detail.html  billing_form.html  billing_list.html  dashboard.html  doctor_confirm_delete.html  doctor_detail.html  doctor_form.html  doctor_list.html  login.html  patient_confirm_delete.html  patient_detail.html  patient_form.html  patient_list.html  treatment_confirm_delete.html  treatment_detail.html  treatment_form.html  treatment_list.html  user_dashboard.html
