[project]
name = "medicare-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "django>=4.2.10",
    "reportlab>=4.4.4",
    "pandas>=2.3.3",
    "reportlab >=4.4.4",
    "pandas >=2.3.3",
    "python-dateutil >=2.8.2",
]
